@@ -1,6 +1,7 @@
 2009-07-01  Roland McGrath  <roland@redhat.com>
 
 	* run-dwarfcmp-self.sh: Run on dwarflint too.
+	Fiddle failure output.
 
 2009-06-15  Roland McGrath  <roland@redhat.com>
 
